test/corpus/fail/M0113.mo
=========
M0113.mo
=========

let {foo} = true

---

(source_file
  (let_dec
    (obj_pat
      (pat_field
        (identifier)))
    (lit_exp
      (bool_literal))))
